@@ -65,6 +65,9 @@ Included
 - Emergency verify report path now preserves policy context lines (`policy.*`) so fail-closed receipts remain operator-readable under write-path fallback.
 - `privacy_lint` report output now uses staged atomic finalize (`privacy_lint_v0.json.stage` -> `privacy_lint_v0.json`) to prevent partial report residue.
 - Added runtime test coverage that asserts privacy-lint staged finalize behavior and no leftover `.stage` file.
+- `host_status` receipt emission now uses staged atomic finalize (`host_status_*.json.stage` -> `host_status_*.json`).
+- `host_update` receipt emission now uses staged atomic finalize (`host_update_receipt.json.stage` -> `host_update_receipt.json`).
+- Added host runtime test assertions that no host receipt `.stage` files remain after finalize.
 - Safe-run now enforces a non-blocking evidence corridor check before completion:
 - Expected receipt artifacts are verified for presence and digest consistency.
 - Pre-existing/stale unmanaged output files anywhere under the run out-root are flagged as orphan evidence.
